--- a/html/beneficios.html
+++ b/html/beneficios.html
@@ -6,9 +6,34 @@
 </head>
 <body>
     <header class="header">
-        <h1 class="header-title">BENEFICIOS TANGIBLES DE LA INTELIGENCIA ARTIFICIAL</h1>
         <img class="header-image" src="../image/IA-titulo-bt.jpg" alt="Imagen">
+        <h1 class="header-title">BENEFICIOS TANGIBLES DE LA INTELIGENCIA ARTIFICIAL</h1>
     </header>
+
+    <nav>
+        <ul>
+            <li><a href="#robots">ROBOTS</a></li>
+            <li><a href="#asistentes">ASISTENTES VIRTUALES</a></li>
+            <li><a href="#juguetes">JUGUETES INTELIGENTES</a></li>
+            <li><a href="#realidad_virtual">SISTEMAS DE REALIDAD VIRTUAL</a></li>
+        </ul>
+    </nav>
+
+    <section id="robots">
+        <h2>ROBOTS</h2>
+    </section>
+
+    <section id="asistentes">
+        <h2>ASISTENTES VIRTUALES</h2>
+    </section>
+
+    <section id="juguetes">
+        <h2>JUGUETES INTELIGENTES</h2>
+    </section>
+
+    <section id="realidad_virtual">
+        <h2>SISTEMAS DE REALIDAD VIRTUAL</h2>
+    </section>
 
 </body>
 </html>
