--- a/html/beneficios.html
+++ b/html/beneficios.html
@@ -5,8 +5,7 @@
     <link rel="stylesheet" type="text/css" href="../css/beneficiosStyle.css">
 </head>
 <body>
-    <header class="header">
-        <img class="header-image" src="../image/IA-titulo-bt.jpg" alt="Imagen">
+    <header>
         <h1 class="header-title">BENEFICIOS TANGIBLES DE LA INTELIGENCIA ARTIFICIAL</h1>
     </header>
 
@@ -18,6 +17,23 @@
             <li><a href="#realidad_virtual">SISTEMAS DE REALIDAD VIRTUAL</a></li>
         </ul>
     </nav>
+
+    <div class="container">
+        <div class="column">
+            <img src="../image/ia-bt.jpg" alt="Imagen">
+        </div>
+        <div class="column">
+          <h2>¿Sabías qué?</h2>
+          <p>La inteligencia artificial ha revolucionado muchos aspectos de nuestra vida cotidiana, y uno de ellos es el campo de la medicina. 
+            Los algoritmos de IA están siendo utilizados para ayudar en el diagnóstico de enfermedades de manera más precisa y temprana. Un 
+            estudio reciente demostró que un modelo de IA pudo detectar el cáncer de pulmón con una precisión del 94%, superando a los 
+            radiólogos humanos cuya precisión fue del 65%. Esto significa que la IA tiene el potencial de salvar vidas al identificar 
+            el cáncer en etapas más tempranas, cuando es más tratable. Con avances como este, la IA se está convirtiendo en una herramienta 
+            indispensable en el campo de la medicina y promete un futuro prometedor en el diagnóstico y tratamiento de enfermedades.
+          </p>
+        </div>
+      </div>
+      
 
     <section id="robots">
         <h2>ROBOTS</h2>
