--- a/html/impacto.html
+++ b/html/impacto.html
@@ -3,6 +3,43 @@
 <head>
     <title>Impacto de la Inteligencia Artificial</title>
     <link rel="stylesheet" type="text/css" href="../css/style1.css">
+    <style>
+        #negativo {
+            background-color: #f9f9f9; /* Fondo gris claro */
+            padding: 50px;
+        }
+
+        #negativo h2 {
+            color: #333333; /* Texto principal */
+            margin-bottom: 20px;
+        }
+
+        #negativo p {
+            font-size: 18px;
+            line-height: 1.6;
+        }
+
+        #negativo .image-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-wrap: wrap;
+            margin-top: 30px;
+        }
+
+        #negativo .image-container img {
+            width: 200px;
+            height: 200px;
+            margin: 10px;
+            border-radius: 50%;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+            transition: transform 0.3s ease-in-out;
+        }
+
+        #negativo .image-container img:hover {
+            transform: scale(1.1);
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -14,6 +51,7 @@
             <li><a href="#positivo">Impacto positivo</a></li>
             <li><a href="#negativo">Impacto negativo</a></li>
             <li><a href="#futuro">Futuro de la IA</a></li>
+            <li><a href="#explicacion">Breve Explicación</a></li>
         </ul>
     </nav>
 
@@ -41,6 +79,14 @@
             <li>La dependencia excesiva de la IA puede generar vulnerabilidades y riesgos en caso de fallos o manipulaciones.</li>
             <li>La ética y la responsabilidad en el desarrollo y uso de la IA son temas de debate continuo.</li>
         </ul>
+
+        <div class="image-container">
+            <img src="../image/img2.jpg" alt="Imagen 1">
+            <img src="../image/img3.jpg" alt="Imagen 2">
+            <img src="../image/img4.jpg" alt="Imagen 3">
+            <img src="../image/img5.jpeg" alt="Imagen 4">
+            <img src="../image/img6.jfif" alt="Imagen 5">
+        </div>
     </section>
 
     <section id="futuro">
@@ -56,8 +102,21 @@
         </ul>
     </section>
 
+    <section id="explicacion">
+        <h2>Breve Explicación del Impacto de la Inteligencia Artificial</h2>
+        <p>La inteligencia artificial ha tenido un impacto profundo en nuestra sociedad, transformando diversos aspectos de nuestras vidas. Ha mejorado la eficiencia, la precisión y la capacidad de realizar tareas complejas en numerosas áreas, como la medicina, la industria, el transporte, las finanzas y la educación.</p>
+        <p>Al mismo tiempo, la IA también plantea desafíos y preocupaciones, como la posible pérdida de empleos, la privacidad de los datos, los sesgos algorítmicos y las cuestiones éticas. Sin embargo, a medida que la IA continúa avanzando, se espera que su impacto positivo supere sus desafíos, con avances futuros que incluyan IA más avanzada, robótica y automatización, integración en la vida cotidiana y colaboración entre humanos y máquinas.</p>
+        <p>Para obtener más información sobre el impacto de la inteligencia artificial, puedes consultar los siguientes recursos:</p>
+        <ul>
+            <li><a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6131790/">Artículo sobre el impacto de la IA en la medicina</a></li>
+            <li><a href="https://www.ejemplo2.com">Informe sobre los desafíos éticos de la IA</a></li>
+            <li><a href="https://www.ejemplo3.com">Video sobre el futuro de la IA y la robótica</a></li>
+        </ul>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/NSf3o-wxtQ0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </section>
+
     <footer>
-        <p>Derechos de autor © 2023 - Tu Nombre</p>
+        <p>Derechos de autor © 2023 - WEKE</p>
     </footer>
 </body>
 </html>
