--- a/html/impacto.html
+++ b/html/impacto.html
@@ -4,19 +4,76 @@
     <title>Impacto de la Inteligencia Artificial</title>
     <link rel="stylesheet" type="text/css" href="../css/style1.css">
     <style>
-        #negativo {
+        /* Estilos personalizados para el video */
+        #explicacion iframe {
+            width: 100%;
+            height: 450px;
+            border: none;
+            margin-bottom: 30px;
+        }
+
+        /* Estilos adicionales para hacer la sección de impacto positivo más llamativa */
+        #positivo {
             background-color: #f9f9f9; /* Fondo gris claro */
             padding: 50px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        #positivo h2 {
+            color: #333333; /* Texto principal */
+            margin-bottom: 20px;
+            text-align: center;
+        }
+
+        #positivo p {
+            font-size: 18px;
+            line-height: 1.6;
+            text-align: center;
+        }
+
+        #positivo ul {
+            padding-left: 0;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            align-items: center;
+            list-style-type: none;
+        }
+
+        #positivo ul li {
+            margin: 20px;
+            width: 300px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+            padding: 20px;
+            text-align: center;
+            transition: transform 0.3s ease-in-out;
+        }
+
+        #positivo ul li:hover {
+            transform: scale(1.1);
+        }
+
+        /* Estilos adicionales para hacer la sección de impacto negativo más llamativa */
+        #negativo {
+            background-color: #ffffff; /* Fondo blanco */
+            padding: 50px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
 
         #negativo h2 {
             color: #333333; /* Texto principal */
             margin-bottom: 20px;
+            text-align: center;
         }
 
         #negativo p {
             font-size: 18px;
             line-height: 1.6;
+            text-align: center;
         }
 
         #negativo .image-container {
@@ -60,11 +117,36 @@
         <p>La inteligencia artificial ha generado un impacto significativo en diversas áreas:</p>
 
         <ul>
-            <li>En la medicina, se utiliza para el diagnóstico más preciso y el descubrimiento de nuevos tratamientos.</li>
-            <li>En la industria, se automatizan tareas repetitivas y peligrosas, aumentando la eficiencia y la seguridad laboral.</li>
-            <li>En el transporte, se están desarrollando vehículos autónomos que prometen una conducción más segura y eficiente.</li>
-            <li>En el ámbito financiero, se utiliza para el análisis de datos y la detección de fraudes.</li>
-            <li>En la educación, se están desarrollando sistemas de aprendizaje personalizados que mejoran la experiencia de los estudiantes.</li>
+            <li>
+                <div class="impacto-item">
+                    <img src="../image/img1.jpg" alt="Imagen 1">
+                    <p>En la medicina, se utiliza para el diagnóstico más preciso y el descubrimiento de nuevos tratamientos.</p>
+                </div>
+            </li>
+            <li>
+                <div class="impacto-item">
+                    <img src="../image/img2.jpg" alt="Imagen 2">
+                    <p>En la industria, se automatizan tareas repetitivas y peligrosas, aumentando la eficiencia y la seguridad laboral.</p>
+                </div>
+            </li>
+            <li>
+                <div class="impacto-item">
+                    <img src="../image/img3.jpg" alt="Imagen 3">
+                    <p>En el transporte, se están desarrollando vehículos autónomos que prometen una conducción más segura y eficiente.</p>
+                </div>
+            </li>
+            <li>
+                <div class="impacto-item">
+                    <img src="../image/img4.jpg" alt="Imagen 4">
+                    <p>En el ámbito financiero, se utiliza para el análisis de datos y la detección de fraudes.</p>
+                </div>
+            </li>
+            <li>
+                <div class="impacto-item">
+                    <img src="../image/img5.jpg" alt="Imagen 5">
+                    <p>En la educación, se están desarrollando sistemas de aprendizaje personalizados que mejoran la experiencia de los estudiantes.</p>
+                </div>
+            </li>
         </ul>
     </section>
 
