--- a/html/beneficios.html
+++ b/html/beneficios.html
@@ -37,6 +37,56 @@
 
     <section id="robots">
         <h2>ROBOTS</h2>
+        <p>La capacidad de aprendizaje y de interacción con los seres humanos y el entorno de la IA se ha desarrollado hasta tal punto que 
+            ha conseguido revolucionar el campo de la robótica. Hace ya tiempo que existen robots con inteligencia artificial, programados 
+            no solo para cumplir tareas específicas, sino con la habilidad de aprender e interactuar.</p>
+        <p>El campo colaborativo entre la ingeniería y la robótica ha hecho posible la creación de robots con forma dinámica y articulada. 
+            Muchos de estos programas se asemejan en gran medida a una persona, mientras que algunos adoptan otras formas parecidas.</p>
+        <p>No obstante, lo que más sorprende de estos robots con inteligencia artificial no es el parentesco de su cuerpo con el ser humano,
+            sino el despliegue de capacidades que ganan gracias a la IA. Aqui descrubriras algunos de los mejores proyectos hasta la fecha.</p>
+        <div class="container2">
+            <div class="column2">
+                <h3>Sophia, el Primer Humanoide en Integrar IA</h3>
+                <p>Sophia no solo es el robot inteligente más famoso, también es de los humanoides que cuenta con la tecnología más avanzada.
+                     Este autómata fue creado en el año 2016 por la compañía Hanson Robotics, combinando tres redes neuronales de IA que 
+                     permiten su funcionamiento. Entre sus funciones destaca un sistema para el procesamiento de lenguaje conversacional, y un
+                    mecanismo visual para identificar gestos y expresiones.</p>
+                <p>Pero, no es lo único que destaca en Sophia, ya que también incorpora sentimientos propios, siendo uno de los ejemplos más 
+                    claros de inteligencia artificial emocional. De igual manera, cuenta con una estructura articulada, que le permite mover
+                    sus manos y ojos, así como realizar ciertos movimientos que a antes solo podían realizar los humanos.</p>
+            </div>
+            <div class="column2">
+                <img src="../image/sofia-bt.webp" alt="Imagen">
+            </div>
+        </div>
+        <div class="container3">
+            <div class="column3">
+                <h3>Atlas, el Robot que Puede Sortear Obstáculos</h3>
+                <p>Atlas es otro de los grandes robots con inteligencia artificial que están revolucionando el mundo gracias a su tecnología
+                     avanzada. Desarrollado por la empresa Boston Dynamics, es un autómata con una forma que nos podría recordar a la de un ser
+                      humano normal y corriente, y sus extremidades funcionan a través de activación hidráulica.</p>
+                <p>El mismo cuenta con cuatro extremidades fabricadas con aluminio y titanio, además de un sistema de visión sofisticada y
+                     cámaras estéreo. Por su parte, también incluye telémetros láser y un software que le brinda control total de sus piernas y
+                     brazos, junto a una gran precisión de movimientos. </p>
+                <p>Lo más innovador de este robot, siendo el aspecto que más lo caracteriza, es que puede caminar y realizar movimientos que
+                     podrían ser difíciles para un humano. Por ejemplo, es capaz de saltar y esquivar obstáculos, cargar objetos pesados y subir escaleras.</p>
+            </div>
+            <div class="column3">
+                <iframe width="600" height="350" src="https://www.youtube.com/embed/tF4DML7FIWk" frameborder="0" allowfullscreen></iframe>
+            </div>
+        </div>
+        <div class="container4">
+            <div class="column4">
+                <h3>Robothespian, el Más Encantador de Los Robots con Inteligencia Artificial</h3>
+                <p>Este es otro autómata con IA fabricado por la compañía Engineered Arts. Robothespian es un humanoide que puede hablar hasta 20 idiomas 
+                    distintos, además de poseer la capacidad de copiar los gestos de otras personas.</p>
+                <p>Así como puede interactuar con el público, de igual manera logra hacerlo con otros robots con inteligencia artificial. Asimismo, cuenta 
+                    con una gran cantidad de expresiones, además de las que ya puede imitar, y puede reaccionar a eventos en tiempo real.</p>
+            </div>
+            <div class="column4">
+                <img src="../image/robothespian-bt.webp" alt="Imagen">
+            </div>
+        </div>
     </section>
 
     <section id="asistentes">
