--- a/html/beneficios.html
+++ b/html/beneficios.html
@@ -91,6 +91,39 @@
 
     <section id="asistentes">
         <h2>ASISTENTES VIRTUALES</h2>
+        <p>Un asistente virtual es una inteligencia artificial con funciones de asistente personal, que es capaz de automatizar y de poner en marcha tareas,
+             así como de responder a solicitudes puntuales. La interacción que se da entre un asistente virtual y una persona debe ser natural: 
+             Una persona se comunica usando la voz y el asistente virtual lo procesa, interpreta y responde de la misma manera.</p>
+        <div class="container5">
+            <div class="box">
+                <img src="../image/alexa-bt.webp" alt="Imagen">
+                <h3>ALEXA</h3>
+                <p>Alexa es el nombre del asistente virtual creado por Amazon, y con el que puedes interactuar a través de los altavoces 
+                    inteligentes Echo, que son altavoces siempre conectados a Internet. También puedes utilizar Alexa en los televisores
+                     compatibles, y en los móviles que bajen la aplicación Amazon Alexa.</p>
+            </div>
+            <div class="box">
+                <img src="../image/siri-bt.jpg" alt="Imagen">
+                <h3>SIRI</h3>
+                <p>Siri es una inteligencia artificial con funciones de asistente personal a veces con su propia personalidad para iOS,
+                     macOS, tvOS y watchOS. El asistente intenta apoyar al usuario en todas sus actividades personales y para ello se apoya en
+                     la tecnología digital para contestar automáticamente preguntas y ordenes.</p>
+            </div>
+            <div class="box">
+                <img src="../image/google_assistant-bt.jpg" alt="Imagen">
+                <h3>ASISTENTE DE GOOGLE</h3>
+                <p>El Asistente de Google es un asistente virtual desarrollado con Inteligencia artificial por Google que está disponible
+                     principalmente en dispositivos móviles y domésticos inteligentes. A diferencia de Google Now, el Asistente de Google puede
+                    participar en conversaciones bidireccionales.</p>
+            </div>
+            <div class="box">
+                <img src="../image/bixby-bt.webp" alt="Imagen">
+                <h3>BIXBY</h3>
+                <p>Bixby es un asistente virtual desarrollado por Samsung. Bixby te permite controlar tu teléfono y hacer 
+                    comandos hablando en voz alta. Bixby tiene acceso a la mayoría de tus configuraciones y puede acceder a muchas 
+                    de tus aplicaciones, lo que hace que personalizar y usar tu teléfono sea más rápido y fácil.</p>
+            </div>
+        </div>
     </section>
 
     <section id="juguetes">
