Cuadros con imagenes
Se implementaron cambios con respecto a la pagina de impacto con respecto a las imagenes

--- a/html/impacto.html
+++ b/html/impacto.html
@@ -80,13 +80,12 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            flex-wrap: wrap;
             margin-top: 30px;
         }
 
         #negativo .image-container img {
-            width: 200px;
-            height: 200px;
+            max-width: 200px;
+            height: auto;
             margin: 10px;
             border-radius: 50%;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
@@ -119,31 +118,31 @@
         <ul>
             <li>
                 <div class="impacto-item">
-                    <img src="../image/img1.jpg" alt="Imagen 1">
+                    <img src="../image/img7.jfif" alt="Imagen 1" style="width: 100%;">
                     <p>En la medicina, se utiliza para el diagnóstico más preciso y el descubrimiento de nuevos tratamientos.</p>
                 </div>
             </li>
             <li>
                 <div class="impacto-item">
-                    <img src="../image/img2.jpg" alt="Imagen 2">
+                    <img src="../image/img8.jfif" alt="Imagen 2" style="width: 100%;">
                     <p>En la industria, se automatizan tareas repetitivas y peligrosas, aumentando la eficiencia y la seguridad laboral.</p>
                 </div>
             </li>
             <li>
                 <div class="impacto-item">
-                    <img src="../image/img3.jpg" alt="Imagen 3">
+                    <img src="../image/img9.jfif" alt="Imagen 3" style="width: 100%;">
                     <p>En el transporte, se están desarrollando vehículos autónomos que prometen una conducción más segura y eficiente.</p>
                 </div>
             </li>
             <li>
                 <div class="impacto-item">
-                    <img src="../image/img4.jpg" alt="Imagen 4">
+                    <img src="../image/img10.jfif" alt="Imagen 4" style="width: 100%;">
                     <p>En el ámbito financiero, se utiliza para el análisis de datos y la detección de fraudes.</p>
                 </div>
             </li>
             <li>
                 <div class="impacto-item">
-                    <img src="../image/img5.jpg" alt="Imagen 5">
+                    <img src="../image/img11.jfif" alt="Imagen 5" style="width: 100%;">
                     <p>En la educación, se están desarrollando sistemas de aprendizaje personalizados que mejoran la experiencia de los estudiantes.</p>
                 </div>
             </li>
@@ -154,20 +153,30 @@
         <h2>Impacto negativo de la Inteligencia Artificial</h2>
         <p>A pesar de los avances, la inteligencia artificial también presenta desafíos y preocupaciones:</p>
 
-        <ul>
-            <li>La sustitución de empleos por la automatización puede afectar a ciertos sectores laborales y requerir una adaptación de la fuerza laboral.</li>
-            <li>La privacidad se ve comprometida con la recopilación masiva de datos personales y la posibilidad de uso indebido.</li>
-            <li>El sesgo algorítmico puede perpetuar desigualdades y discriminaciones existentes en la sociedad.</li>
-            <li>La dependencia excesiva de la IA puede generar vulnerabilidades y riesgos en caso de fallos o manipulaciones.</li>
-            <li>La ética y la responsabilidad en el desarrollo y uso de la IA son temas de debate continuo.</li>
+        <ul style="display: flex; justify-content: center; flex-wrap: wrap;">
+            <li style="width: 200px; margin: 10px;">
+                La sustitución de empleos por la automatización puede afectar a ciertos sectores laborales y requerir una adaptación de la fuerza laboral.
+            </li>
+            <li style="width: 200px; margin: 10px;">
+                La privacidad se ve comprometida con la recopilación masiva de datos personales y la posibilidad de uso indebido.
+            </li>
+            <li style="width: 200px; margin: 10px;">
+                El sesgo algorítmico puede perpetuar desigualdades y discriminaciones existentes en la sociedad.
+            </li>
+            <li style="width: 200px; margin: 10px;">
+                La dependencia excesiva de la IA puede generar vulnerabilidades y riesgos en caso de fallos o manipulaciones.
+            </li>
+            <li style="width: 200px; margin: 10px;">
+                La ética y la responsabilidad en el desarrollo y uso de la IA son temas de debate continuo.
+            </li>
         </ul>
 
         <div class="image-container">
-            <img src="../image/img2.jpg" alt="Imagen 1">
-            <img src="../image/img3.jpg" alt="Imagen 2">
-            <img src="../image/img4.jpg" alt="Imagen 3">
-            <img src="../image/img5.jpeg" alt="Imagen 4">
-            <img src="../image/img6.jfif" alt="Imagen 5">
+            <img src="../image/img2.jpg" alt="Imagen 1" style="width: 100%;">
+            <img src="../image/img3.jpg" alt="Imagen 2" style="width: 100%;">
+            <img src="../image/img4.jpg" alt="Imagen 3" style="width: 100%;">
+            <img src="../image/img5.jpeg" alt="Imagen 4" style="width: 100%;">
+            <img src="../image/img6.jfif" alt="Imagen 5" style="width: 100%;">
         </div>
     </section>
 
@@ -198,7 +207,7 @@
     </section>
 
     <footer>
-        <p>Derechos de autor © 2023 - WEKE</p>
+        <p>Derechos de autor &copy; 2023 | Todos los derechos reservados</p>
     </footer>
 </body>
 </html>
