--- a/html/beneficios.html
+++ b/html/beneficios.html
@@ -128,6 +128,34 @@
 
     <section id="juguetes">
         <h2>JUGUETES INTELIGENTES</h2>
+        <p>Los juguetes clásicos incorporan las nuevas tecnologías para romper con el plano físico que les caracteriza y transportar a los 
+            más pequeños a nuevos mundos que estimulen su imaginación y les acerque al mundo digital. La industria juguetera se conecta a la 
+            Realidad Virtual, la Inteligencia Artificial y el Internet de las Cosas para abrir nuevos horizontes en el entretenimiento 
+            infantil, el desarrollo de destrezas digitales e incluso en la educación.</p>
+        <div class="container6">
+            <div class="box2">
+                <img src="../image/ifs-bt.jpg" alt="Imagen">
+                <h3>THE IFS</h3>
+                <p>Tienen forma de cubos rompecabezas de colores, pero nada más lejos de la realidad. Bajo esa apariencia sencilla se esconden
+                    unos robots con sensores y actuadores y una misión: enseñar a programar a niñas y niños desde los 3 años sin necesidad de 
+                    una pantalla. Con esta premisa se presenta The Ifs, un proyecto surgido de un equipo multidisciplinar integrado por cuatro
+                    inventores jóvenes españoles.</p>
+            </div>
+            <div class="box2">
+                <img src="../image/robo_wunderkind_bt.avif" alt="Imagen">
+                <h3>ROBO WUNDERKIND</h3>
+                <p>Robo Wunderkind es un juguete modular creado con la intención de que niños y mayores puedan empezar a dar sus primeros pasos
+                     en la robótica y la programación. Se trata de un set de piezas cuadradas que se acoplan entre ellas para poder montar con
+                      ellas todo tipo de robots que luego se pueden manejar con una aplicación móvil.</p>
+            </div>
+            <div class="box2">
+                <img src="../image/lego-boost-bt.webp" alt="Imagen">
+                <h3>LEGO BOOST</h3>
+                <p>El nuevo sistema dota de motores y sensores a estas construcciones e ingenios para que luego podamos programar esos motores
+                     y sensores fácilmente. De hecho el sistema está pensado para niños a partir de 7 años, y puede que se convierta en una de
+                    las referencias en un terreno en el que muchos fabricantes están tratando de dar un paso definitivo.</p>
+            </div>
+        </div>
     </section>
 
     <section id="realidad_virtual">
