--- a/html/beneficios.html
+++ b/html/beneficios.html
@@ -187,5 +187,10 @@
         <iframe width="1000" height="500" src="https://www.youtube.com/embed/U1uv2C41qu8" frameborder="0" allowfullscreen></iframe>
     </section>
 
+    <footer>
+        <p>Derechos de autor &copy; 2023 | Todos los derechos reservados</p>
+      </footer>
+      
+
 </body>
 </html>
