IA en accion_Sub-Menu
Se ha agregado un submenu que contendra los accedos a cada division de la pagina.

--- a/html/accion.html
+++ b/html/accion.html
@@ -8,5 +8,12 @@
     <header>
         <h1>IA EN ACCIÓN</h1>
     </header>
+    <nav>
+        <ul>
+            <li><a href="#industria">En la industria</a></li>
+            <li><a href="#vida">En la vida cotidiana</a></li>
+            <li><a href="#etica'">Ética y desafios</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
