Sección informativa de implementación.
Se ha agregado información acerca de la sección, y hecho modificaciones al titulo.

--- a/html/omnipresencia.html
+++ b/html/omnipresencia.html
@@ -29,13 +29,44 @@
                 cambios dentro de software. Claramente no todos pueden ser beneficios como aparentan, sin embargo aún
                 existen cientos de personas que opinan que la IA vino a apoderarse del mundo y en algún momento se revelaría en contra de nosotros.
                 Sin embargo mas parece ser que la hemos tomado como una aliada antes que a una enemiga, aún...
-
             </p>
-        </div>
-        <div class="column">
-            <img src="../image/IA.jpg" alt="Imagen" width="500" height="300">
         </div>
     </section>
 
+    <section id="Implementacion">
+        <h2>Implementacion</h2>
+        <p>Sin duda alguna la divulgación de un motor de IA como un reemplazo efectivo del buscador mas famoso (google) ha sido trascendental en los últimos días,
+            que sepamos también que existe una motor de IA que te ayuda a crear parrafos para tus ensayos es simplemente increible, estos y muchos mas motores de IA han ido saliendo a la luz 
+            (y los que aún faltan) como herramientas efectivas para facilitar algunos procesos, no solo para personas que buscan de estas, sino grandes empresas que las han implementado, no solo para optimizar
+            procesos, sino para crear productos a partir de la IA, para realizar analisis de riesgos, para evaluar mercados, ideas de productos, entre otras de entre
+            muchas posibilidades que ofrece la IA. Su implementación no solo ha marcado un mejoramiento tecnológico, sino también ha involucrado a muchas mas empresas que siquiera habían implementado
+            uso de software y hardware para sus procesos que hoy en día es una necesidad. Existen otras empresas que se han dedicado de lleno a crear motores de IA.
+        </p>
+        <h3>Empresas lideres en IA</h3>
+        <div class="container1">
+            <div class="box_2">
+                <img src="../image/IBM.png" alt="Imagen" width="100" height="100">
+                <p>IBM</p>
+                <p>Su producto principal es IBM Watson</p>
+            </div>
+            <div class="box_2">
+                <img src="../image/sas-logo.png" alt="Imagen" width="100" height="100">
+                <p>SAS</p>
+                <p>Su producto principal es SAS Viya Model Manager </p>
+            </div>
+            <div class="box_2">
+                <img src="../image/datarobot_logo.png" alt="Imagen" width="150" height="100">
+                <p>DATAROBOT</p>
+                <p>Su producto principal es AutoML </p>
+            </div>
+            <div class="box_2">
+                <img src="../image/Microsoft-logo.jpg" alt="Imagen" width="150" height="100">
+                <p>Microsoft</p>
+                <p>Ofrece multiples servicios de IA y maching learning</p>
+            </div>
+
+        </div>
+
+    </section>
 </body>
 </html>
