Sección de proyección.
Se ha agregado sección de proyección y efectos en algunos fondos.

--- a/html/omnipresencia.html
+++ b/html/omnipresencia.html
@@ -17,7 +17,7 @@
             <li><a href="#Implementacion">Implementacion</a></li>
             <li><a href="#Efectos">Efectos</a></li>
             <li><a href="#Proxima">¿Es necesaria?</a></li>
-            <li><a href="Causas">¿Porque la requerimos?</a></li>
+            <li><a href="#Causas">¿Porqué la requerimos?</a></li>
         </ul>
     </nav>
 
@@ -64,9 +64,58 @@
                 <p>Microsoft</p>
                 <p>Ofrece multiples servicios de IA y maching learning</p>
             </div>
-
         </div>
+    </section>
 
+    <section id="Efectos">
+        <br>
+        <br>
+        <h2>Efectos de la IA</h2>
+        <p>Existen muchos efectos que otorgan a la IA la caracteristica de ser omnipresente. Su presencia es tanta que se extiende en areas como la industria, software, educación, ingenieria, etc. La IA ha sido tema de conversación 
+            en muchas ocasiones, desde que ChatGPT causó revuelo muchas personas esperan la implementación de esta misma en software que es de su uso; solo con mencionar que muchos software tales como PhotoShop, adobe, bing, entre otros, han implementado
+            un motor de inteligencia artificial dentro de su sistema. La inovación ha permitido que se optimizen aplicaciones, mejoren el proceso, y que le den una mejor experiencia al usuario
+            que es quien las utiliza. El efecto de utilización realmente es impactante, según CIO una de cada dos empresas ya implementa un motor de IA en su empresa.
+        </p>
+        <div class="Container2">
+            <div class="box_3">
+                <img src="../image/bing_logo.jpg" alt="Imagen" width="200" height="200">
+                <h3>Bing</h3>
+                <p>Bing es un motor de búsqueda creado por microsoft como una alternativa y competencia directa
+                    para google chrome, implementando dentro de su sistema al motor de chatGPT 4, que optimiza y ayuda
+                    a obtener mejores resultados de búsqueda.
+                </p>
+            </div>
+            <div class="box_3">
+                <img src="../image/photoshop_logo.png" alt="Imagen" width="200" height="200">
+                <h3>PhotoShop</h3>
+                <p>PhotoShop es un software de edición de fotografía e imagenes que hace no mucho implementó con ayuda de IA funciones para editar fragmentos de imagen, realizar reemplazos de fondos, entre otras más.
+                </p>
+            </div>
+            <div class="box_3">
+                <img src="../image/openai.png" alt="Imagen" width="200" height="200">
+                <h3>OpenAi</h3>
+                <p>OpenAi se ha convertido en una de las empresas mas relevantes en los últimos meses, debido a la popularización de su motor de IA: ChatGPT, que esta disponible para cualquier usuario y marcando
+                    impacto en quienes han hecho uso de esta herramienta.
+                </p>
+            </div>
+        </div>
+    </section>
+    <section id="Proxima">
+        <div class="container3">
+            <div class="text1">
+                <h2>
+                    ¿Es necesaria la IA?
+                </h2>
+                <p>Quizas no te hayas percatado que ya muchos programas de uso cotidiano han estado implementando funciones de la mano con la IA, funciones que quizas ya estes utilizando en este momento, 
+                    hay que comprender que esta es una oportunidad enorme visto desde el área empresarial y tecnológica, de innovar, de implementar y de optimizar; hay quienes piensan que en algún momento
+                    la IA llegará a reemplazar a la presencia humana, sin embargo existen muchas limitantes por resolverse, la IA no pretende reemplazar el trabajo humano sino facilitar tareas
+                    que para el ser humano requieren tiempo que quizas aproveche en otras actividades. Es necesaria para la sustentabilidad de la misma IA y para la continuidad del mejoramiento para brindar mejores posibilidades.
+                </p>
+            </div>
+            <div class="text1">
+                <img src="../image/IA_human.jpeg" alt="Imagen">
+            </div>
+        </div>
     </section>
 </body>
 </html>
