--- a/html/beneficios.html
+++ b/html/beneficios.html
@@ -188,7 +188,7 @@
     </section>
 
     <footer>
-        <p>Derechos de autor &copy; 2023 | Todos los derechos reservados</p>
+        <p>Derechos de autor &copyWEKE; 2023 | Todos los derechos reservados</p>
     </footer>
       
 
