--- a/html/home.html
+++ b/html/home.html
@@ -12,7 +12,7 @@
     <nav>
         <ul>
             <li><a href="../html/home.html">PRINCIPAL</a></li>
-            <li><a href="#">OMNIPRESENCIA DE LA IA</a></li>
+            <li><a href="../html/omnipresencia.html">OMNIPRESENCIA DE LA IA</a></li>
             <li><a href="../html/beneficios.html">BENEFICIOS TANGIBLES</a></li>
             <li><a href="../html/accion.html">IA EN ACCIÓN</a></li>
             <li><a href="../html/impacto.html">IMPACTO</a></li>
@@ -29,9 +29,48 @@
             no en detrimento de la humanidad”</h2>
         </div>
       </div>
-  
+
+    <div class="container2">
+            <div class="box">
+                <img src="../image/IA_human.jpeg" alt="Imagen">
+                <h3>OMNIPRESENCIA DE LA IA</h3>
+                <p>La palabra omnipresente significa estar en todos lados al mismo tiempo, cosa que para referirse a la IA no esta nada alejada
+                     de la realidad; la IA no solo ha significado un cambio dentro dentro de la industria, sino que amplia el horizonte en
+                     tecnología que teniamos hasta ahora, la presencia de esta herramienta no solo ha facilitado muchas tareas sino que también
+                     ha significado cambios dentro de software.</p>
+                <a href="../html/omnipresencia.html"><button class="more-info-btn">Más información</button></a>
+            </div>
+            <div class="box">
+                <img src="../image/ia-bt.jpg" alt="Imagen">
+                <h3>BENEFICIOS TANGIBLES</h3>
+                <p>La inteligencia artificial ha brindado innumerables beneficios tangibles en diversos ámbitos de nuestra sociedad. Gracias 
+                    a su capacidad para procesar grandes cantidades de datos y reconocer patrones complejos, la IA ha mejorado la eficiencia y 
+                    la precisión en tareas antes laboriosas y propensas a errores. </p>
+                <br><br><br>
+                <a href="../html/beneficios.html"><button class="more-info-btn">Más información</button></a>
+            </div>
+            <div class="box">
+                <img src="../image/portada3.jpg" alt="Imagen">
+                <h3>IA EN ACCIÓN</h3>
+                <p>La inteligencia artificial se manifiesta en diversas formas, como la automatización en la industria, la ayuda en diagnósticos
+                     médicos, los vehículos autónomos y los sistemas de recomendación personalizados. Es importante considerar los desafíos
+                      éticos y sociales y garantizar un uso responsable y beneficioso de la IA en la sociedad.</p>
+                <br><br><br>
+                <a href="../html/accion.html"><button class="more-info-btn">Más información</button></a>
+            </div>
+            <div class="box">
+                <img src="../image/img7.jfif" alt="Imagen">
+                <h3>IMPACTO</h3>
+                <p>La inteligencia artificial ha revolucionado prácticamente todos los aspectos de nuestra sociedad, dejando un impacto 
+                    profundo y duradero en diferentes áreas. Desde la automatización de tareas rutinarias hasta el desarrollo de sistemas 
+                    de recomendación personalizados, la IA ha demostrado su capacidad para mejorar la eficiencia, la precisión y la 
+                    productividad en diversos sectores.</p>
+                <a href="../html/impacto.html"><button class="more-info-btn">Más información</button></a>
+            </div>
+        </div>
+    
     <footer>
-        <p>Derechos de autor &copy; 2023 | Todos los derechos reservados</p>
+        <p>Derechos de autor &copyWEKE; 2023 | Todos los derechos reservados/p>
     </footer>
 
 </body>
