--- a/html/home.html
+++ b/html/home.html
@@ -16,7 +16,6 @@
             <li><a href="../html/beneficios.html">BENEFICIOS TANGIBLES</a></li>
             <li><a href="../html/accion.html">IA EN ACCIÓN</a></li>
             <li><a href="../html/impacto.html">IMPACTO</a></li>
-            <li><a href="../html/creador.html">CREADORES</a></li>
         </ul>
     </nav>
 
@@ -38,6 +37,7 @@
                      de la realidad; la IA no solo ha significado un cambio dentro dentro de la industria, sino que amplia el horizonte en
                      tecnología que teniamos hasta ahora, la presencia de esta herramienta no solo ha facilitado muchas tareas sino que también
                      ha significado cambios dentro de software.</p>
+                <br>
                 <a href="../html/omnipresencia.html"><button class="more-info-btn">Más información</button></a>
             </div>
             <div class="box">
@@ -46,7 +46,7 @@
                 <p>La inteligencia artificial ha brindado innumerables beneficios tangibles en diversos ámbitos de nuestra sociedad. Gracias 
                     a su capacidad para procesar grandes cantidades de datos y reconocer patrones complejos, la IA ha mejorado la eficiencia y 
                     la precisión en tareas antes laboriosas y propensas a errores. </p>
-                <br><br><br>
+                <br><br><br><br>
                 <a href="../html/beneficios.html"><button class="more-info-btn">Más información</button></a>
             </div>
             <div class="box">
@@ -55,7 +55,7 @@
                 <p>La inteligencia artificial se manifiesta en diversas formas, como la automatización en la industria, la ayuda en diagnósticos
                      médicos, los vehículos autónomos y los sistemas de recomendación personalizados. Es importante considerar los desafíos
                       éticos y sociales y garantizar un uso responsable y beneficioso de la IA en la sociedad.</p>
-                <br><br><br>
+                <br><br><br><br>
                 <a href="../html/accion.html"><button class="more-info-btn">Más información</button></a>
             </div>
             <div class="box">
@@ -68,9 +68,44 @@
                 <a href="../html/impacto.html"><button class="more-info-btn">Más información</button></a>
             </div>
         </div>
+
+        <h4>CREADORES</h4>
+
+        <div class="image-container">
+            <div class="image-wrapper">
+                <a href="https://github.com/1Roy1">
+                    <img src="https://avatars.githubusercontent.com/u/100391358?v=4" alt="[Roi Rosales]">
+                    <p class="image-name">[Roi Rosales]</p>
+                </a>
+            </div>
+            <div class="image-wrapper">
+                <a href="https://github.com/EAGutierrez04">
+                    <img src="https://avatars.githubusercontent.com/u/100639541?v=4" alt="[Estuardo Gutierrez]">
+                    <p class="image-name">[Estuardo Gutierrez]</p>
+                </a>
+            </div>
+            <div class="image-wrapper">
+                <a href="https://github.com/Karmaz-29">
+                    <img src="https://avatars.githubusercontent.com/u/94020169?v=4" alt="[Karol Castro]">
+                    <p class="image-name">[Karol Castro]</p>
+                </a>
+            </div>
+            <div class="image-wrapper">
+                <a href="https://github.com/LisAY22">
+                    <img src="https://avatars.githubusercontent.com/u/99896522?v=4" alt="[Elisa Ajxup]">
+                    <p class="image-name">[Elisa Ajxup]</p>
+                </a>
+            </div>
+            <div class="image-wrapper">
+                <a href="https://github.com/WilderL">
+                    <img src="https://avatars.githubusercontent.com/u/47789929?v=4" alt="Imagen 5">
+                    <p class="image-name">[Wilder Menchú]</p>
+                </a>
+            </div>
+        </div>
     
     <footer>
-        <p>Derechos de autor &copyWEKE; 2023 | Todos los derechos reservados/p>
+        <p>Derechos de autor &copyWEKE; 2023 | Todos los derechos reservados</p>
     </footer>
 
 </body>
