--- a/html/accion.html
+++ b/html/accion.html
@@ -10,9 +10,10 @@
     </header>
     <nav>
         <ul>
-            <li><a href="#industria">En la industria</a></li>
-            <li><a href="#vida">En la vida cotidiana</a></li>
-            <li><a href="#etica'">Ética y desafios</a></li>
+            <li><a href="#industria">AUTOMATIZACIÓN INDUSTRIAL</a></li>
+            <li><a href="#medicina">APLICACIONES MÉDICAS</a></li>
+            <li><a href="#vida">EN LA VIDA COTIDIANA</a></li>
+            <li><a href="#etica">ÉTICA Y DESAFIOS</a></li>
         </ul>
     </nav>
 
@@ -27,13 +28,13 @@
                 los desafíos éticos y sociales y garantizar un uso responsable y beneficioso de la IA en la sociedad.
             </p>
         </div>
-      </div>
+    </div>
+
     <section id="industria">
-        <h2>ACCION DE LA IA EN LA INDUSTRIA</h2>
-        <p>
-            La inteligencia artificial ha revolucionado numerosos sectores industriales, impulsando la eficiencia y la toma de decisiones 
-            inteligentes. Algunas aplicaciones notables incluyen:
-        </p>
+        <h2>AUTOMATIZACIÓN EN LA INDUSTRIA</h2>
+        <p>La automatización en la industria es un campo en constante crecimiento impulsado en gran medida por los avances en inteligencia artificial
+             y robótica. Consiste en la aplicación de tecnología para realizar tareas de forma automática, sin intervención humana directa.  
+             Algunas aplicaciones notables incluyen:</p>
         <div class="container2">
             <div class="card">
                 <div class="card-inner">
@@ -61,9 +62,6 @@
                     <div class="back2"></div>
                 </div>
             </div>
-        </div>
-
-        <div class="container3">
             <div class="card">
                 <div class="card-inner">
                     <div class="front">
@@ -90,5 +88,50 @@
                 </div>
             </div>
         </div>
+    </section>
+
+    <section id="medicina">
+        <h2>APLICACIONES MÉDICAS</h2>
+        <p>La inteligencia artificial ha dejado una huella indeleble en el campo de la medicina, revolucionando la forma en que se diagnostican
+             enfermedades, se tratan pacientes y se investiga en el ámbito médico. Con avances significativos en el aprendizaje automático,
+             el procesamiento de imágenes y el análisis de datos, la IA se ha convertido en una herramienta invaluable para los profesionales 
+             de la salud. Desde la detección temprana del cáncer hasta la personalización de tratamientos y la atención remota, las aplicaciones
+             médicas de la IA están transformando radicalmente la forma en que abordamos la salud. En este párrafo introductorio, exploraremos
+            las diversas aplicaciones de la IA en la medicina y su impacto en la atención médica moderna.</p>
+        <div class="container3">
+            <div class="box">
+                <h3>Diagnóstico asistido por IA</h3>
+                <p>Los sistemas de IA pueden analizar grandes cantidades de datos médicos, como imágenes de resonancia magnética (RM), 
+                    tomografías computarizadas (TC) y radiografías, para ayudar en el diagnóstico de enfermedades. Estos sistemas pueden 
+                    detectar patrones y anomalías sutiles que pueden pasar desapercibidos para los médicos, mejorando la precisión y la 
+                    detección temprana de enfermedades como el cáncer, enfermedades cardíacas y trastornos neurológicos.</p>
+            </div>
+            <div class="box">
+                <h3>Medicina personalizada</h3>
+                <p>La IA permite la creación de modelos personalizados basados en datos genéticos, biomarcadores y registros de salud de los 
+                    pacientes. Estos modelos pueden predecir la eficacia y los efectos secundarios de tratamientos específicos, lo que ayuda 
+                    a los médicos a tomar decisiones más informadas y a adaptar los tratamientos de manera individualizada.</p>
+            </div>
+            <div class="box">
+                <h3>Análisis de datos clínicos</h3>
+                <p>La IA puede analizar y extraer información relevante de grandes conjuntos de datos clínicos, como historias médicas, 
+                    registros de pacientes y datos de ensayos clínicos. Esto permite identificar patrones, tendencias y factores de riesgo que 
+                    pueden ayudar en la investigación médica, el desarrollo de medicamentos y la toma de decisiones clínicas.</p>
+            </div>
+            <div class="box">
+                <h3>Monitorización y diagnóstico remoto</h3>
+                <p>Los dispositivos portátiles y sensores de salud basados en IA permiten el seguimiento y diagnóstico remotos de pacientes. 
+                    Estos dispositivos pueden monitorear constantemente los signos vitales, identificar anomalías y alertar a los médicos en
+                     caso de situaciones de emergencia, lo que puede mejorar la atención a distancia y reducir la necesidad de visitas 
+                     presenciales.</p>
+            </div>
+        </div>
+        <iframe width="1000" height="500" src="https://www.youtube.com/embed/ywEYuuzuyUE" frameborder="0" allowfullscreen></iframe>
+    </section>
+
+    <footer>
+        <p>Derechos de autor &copyWEKE; 2023 | Todos los derechos reservados</p>
+    </footer>
+
 </body>
 </html>
