Ultimos cambios de accion
En esta parte se encuentran los ultimos cambios de la pagina de accion.

--- a/html/accion.html
+++ b/html/accion.html
@@ -12,7 +12,6 @@
         <ul>
             <li><a href="#industria">AUTOMATIZACIÓN INDUSTRIAL</a></li>
             <li><a href="#medicina">APLICACIONES MÉDICAS</a></li>
-            <li><a href="#vida">EN LA VIDA COTIDIANA</a></li>
             <li><a href="#etica">ÉTICA Y DESAFIOS</a></li>
         </ul>
     </nav>
@@ -127,6 +126,37 @@
             </div>
         </div>
         <iframe width="1000" height="500" src="https://www.youtube.com/embed/ywEYuuzuyUE" frameborder="0" allowfullscreen></iframe>
+    </section>
+
+    <section id="etica">
+        <h2>ÉTICA Y DESAFIOS</h2>
+        <p>La ética en el campo de la inteligencia artificial (IA) es un tema crucial y cada vez más relevante. A medida que la IA se vuelve
+             más avanzada y se integra en diversas áreas de nuestra sociedad, surgen desafíos éticos que requieren atención y reflexión. 
+             Algunos de los principales desafíos éticos asociados con la IA son los siguientes:</p>
+        <div class="container4">
+            <div class="box2">
+                <img src="../image/etica1.jpg" alt="Imagen">
+                <h3>Privacidad y seguridad</h3>
+                <p>La recopilación y el uso de grandes cantidades de datos para alimentar los sistemas de IA plantean preocupaciones sobre
+                     la privacidad y la seguridad de la información personal. La forma en que se recopilan, almacenan y utilizan estos datos 
+                     debe ser cuidadosamente gestionada para proteger los derechos individuales.</p>
+            </div>
+            <div class="box2">
+                <img src="../image/etica2.webp" alt="Imagen">
+                <h3>Sesgos y discriminación</h3>
+                <p>Los algoritmos de IA pueden verse afectados por sesgos inherentes a los datos con los que fueron entrenados. Esto puede
+                     conducir a decisiones y acciones discriminatorias, como la discriminación racial o de género en la selección de candidatos
+                     o en la concesión de préstamos. Es importante garantizar que los sistemas de IA sean equitativos y estén libres de sesgos
+                     injustos.</p>
+            </div>
+            <div class="box2">
+                <img src="../image/etica3.jpg" alt="Imagen">
+                <h3>Autonomía y toma de decisiones</h3>
+                <p>A medida que la IA se vuelve más autónoma en la toma de decisiones, surgen preguntas sobre cómo equilibrar la autonomía
+                     de los sistemas de IA con la supervisión y el control humano. La confianza y la transparencia en los sistemas de IA son 
+                     fundamentales para garantizar que las decisiones sean comprensibles y aceptables para las personas afectadas por ellas.</p>
+            </div>
+        </div>
     </section>
 
     <footer>
