--- a/html/impacto.html
+++ b/html/impacto.html
@@ -3,6 +3,7 @@
 <head>
     <script src="../js/script.js"></script>
     <title>Impacto de la Inteligencia Artificial</title>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="../css/style1.css">
     <style>
         /* Estilos personalizados para el video */
@@ -363,6 +364,11 @@
             <iframe width="560" height="315" src="https://www.youtube.com/embed/NSf3o-wxtQ0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
     </section>
+    <section id="body1">
+  <div id="robot-hand"></div>
+  <h1 id="greeting">¡Hola! Soy un robot amigable.</h1>
+  <h1 id="greeting2">(Pase el cursor sobre la mano robotica)</h1>
+</section>
     <footer>
         <p>Derechos de autor &copyWEKE; 2023 | Todos los derechos reservados</p>
     </footer>
