Implemetacion de boton de subida
Se agrego a cada pagina la implemntacion de un boton de subida el cual rediriga al principio de la pagina

--- a/html/accion.html
+++ b/html/accion.html
@@ -3,6 +3,7 @@
 <head>
     <title>IA en accion</title>
     <link rel="stylesheet" href="../css/accionStyle.css">
+    <script src="../js/script.js"></script>
 </head>
 <body>
     <header>
@@ -127,7 +128,6 @@
         </div>
         <iframe width="1000" height="500" src="https://www.youtube.com/embed/ywEYuuzuyUE" frameborder="0" allowfullscreen></iframe>
     </section>
-
     <section id="etica">
         <h2>ÉTICA Y DESAFIOS</h2>
         <p>La ética en el campo de la inteligencia artificial (IA) es un tema crucial y cada vez más relevante. A medida que la IA se vuelve
@@ -158,7 +158,7 @@
             </div>
         </div>
     </section>
-
+    <button id="boton-subir"><img src="../image/flecha.png" alt="Botón de subir"></button>
     <footer>
         <p>Derechos de autor &copyWEKE; 2023 | Todos los derechos reservados</p>
     </footer>
