--- a/html/beneficios.html
+++ b/html/beneficios.html
@@ -3,6 +3,7 @@
 <head>
     <title>Beneficios Tangibles</title>
     <link rel="stylesheet" type="text/css" href="../css/beneficiosStyle.css">
+    <script src="../js/script.js"></script>
 </head>
 <body>
     <header>
@@ -186,6 +187,7 @@
         </div>
         <iframe width="1000" height="500" src="https://www.youtube.com/embed/U1uv2C41qu8" frameborder="0" allowfullscreen></iframe>
     </section>
+    <button id="boton-subir"><img src="../image/flecha.png" alt="Botón de subir"></button>
 
     <footer>
         <p>Derechos de autor &copyWEKE; 2023 | Todos los derechos reservados</p>
