--- a/html/impacto.html
+++ b/html/impacto.html
@@ -230,7 +230,7 @@
     <span>Inteligencia</span>
     <span>Artificial</span>
   </h2>
-  <button id="boton2" onclick="window.location.href='#impacto'" style="z-index: 2;">
+  <button id="boton2" onclick="redirigirPagina()" style="z-index: 2;">
     <img src="../image/casita.png" alt="Botón de regresar">
 </button>
 </div>
