--- a/html/omnipresencia.html
+++ b/html/omnipresencia.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <script src="../js/script.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Omnipresencia de la IA</title>
     <link rel="stylesheet" type="text/css" href="../css/omnipresencia.css">
@@ -117,5 +118,6 @@
             </div>
         </div>
     </section>
+    <button id="boton-subir"><img src="../image/flecha.png" alt="Botón de subir"></button>
 </body>
 </html>
