Boton de inicio
Se implemento en cada pagina un boton de inicio para redirigir a la pagina principal

--- a/html/beneficios.html
+++ b/html/beneficios.html
@@ -8,6 +8,8 @@
 <body>
     <header>
         <h1 class="header-title">BENEFICIOS TANGIBLES DE LA INTELIGENCIA ARTIFICIAL</h1>
+        <button id="boton2" onclick="redirigirPagina()" style="z-index: 2;">
+            <img src="../image/casita.png" alt="Botón de regresar">
     </header>
 
     <nav>
