--- a/html/omnipresencia.html
+++ b/html/omnipresencia.html
@@ -11,6 +11,8 @@
 <body>
     <header>
         <h1 class="Main_title">LA OMNIPRESENCIA DE LA INTELIGENCIA ARTIFICIAL</h1>
+        <button id="boton2" onclick="redirigirPagina()" style="z-index: 2;">
+            <img src="../image/casita.png" alt="Botón de regresar">
     </header>
 
     <nav>
