--- a/html/accion.html
+++ b/html/accion.html
@@ -6,8 +6,11 @@
     <script src="../js/script.js"></script>
 </head>
 <body>
+
     <header>
         <h1>IA EN ACCIÓN</h1>
+        <button id="boton2" onclick="redirigirPagina()" style="z-index: 2;">
+            <img src="../image/casita.png" alt="Botón de regresar">
     </header>
     <nav>
         <ul>
