--- a/html/omnipresencia.html
+++ b/html/omnipresencia.html
@@ -115,8 +115,8 @@
                     que para el ser humano requieren tiempo que quizas aproveche en otras actividades. Es necesaria para la sustentabilidad de la misma IA y para la continuidad del mejoramiento para brindar mejores posibilidades.
                 </p>
             </div>
-            <div class="text1">
-                <img src="../image/IA_human.jpeg" alt="Imagen">
+            <div class="contenedor-imagen">
+                <img src="../image/IA_human.jpeg" alt="Imagen" class="imagen-autoajustable">
             </div>
         </div>
     </section>
